# asio_kcp

./: .gitignore  .gitmodules  CMakeLists.txt  VERSION  readme.md  todolist.md
cmake/: utils.cmake
doc/: client_lib_usage.md  install_help.md
src/client/: CMakeLists.txt  client_with_asio.cpp  client_with_asio.hpp  main.cpp  test_util.cpp  test_util.h
src/client_lib/: CMakeLists.txt  kcp_client.cpp  kcp_client.hpp  kcp_client_util.cpp  kcp_client_util.h  kcp_client_wrap.cpp  kcp_client_wrap.hpp
src/client_with_asio/: CMakeLists.txt  client_with_asio.cpp  main.cpp
src/essential/: CMakeLists.txt  check_function.cpp  check_function.h  strutil.cpp  strutil.h  threadsafe_queue.hpp
src/essential/_src/: check_function.cpp
src/essential/_src/utility/: strutil.cpp
src/essential/utility/: strutil.h  threadsafe_queue.hpp  timer.hpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/server_lib/: CMakeLists.txt  asio_kcp_log.hpp  connection.cpp  connection.hpp  connection_container.cpp  connection_container.hpp  connection_manager.cpp  connection_manager.hpp  kcp_typedef.cpp  kcp_typedef.hpp  server.cpp  server.hpp
src/util/: check_function.cpp  check_function.h  connect_packet.cpp  connect_packet.hpp  strutil.cpp  strutil.h  threadsafe_queue.hpp  threadsafe_queue_mutex.hpp
unittest/asio_kcp_client_unittest/: kcp_client_wrap_test.cpp
